# rd_django

./: .gitgnore  .gitignore  AUTHORS  CHANGES.txt  ChangeLog  MANIFEST.in  Pipfile  README.md  requirements.txt  setup  setup.cfg  setup.py
rd_django/: __init__.py  cms_plugins.py  context_processor.py  forms.py  models.py
rd_django.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
rd_django/migrations/: 0001_initial.py  0002_auto_20180521_1446.py  0002_rdperson_rdpersongroup_rdtab_rdtabgroup.py  0003_auto_20180521_1453.py  0003_rdtab_rdtabgroup.py  0004_rdbox.py  0005_auto_20181115_2109.py
rd_django/templategtags/: rd_django.py
rd_django/templates/cd_plugins/: grid_cell.html  grid_container.html
rd_django/templates/rd_django/: box.html  grid_layout.html  icon.html  person.html  person_group.html  tab.html  tab_group.html
rd_django/templates/rd_django/tags/: render_language_block.html
rd_django/templatetags/: __init__.py  rd_django.py  rd_i18n.py
rd_plugins/: cms_plugins.py  constants.py
rd_plugins/locale/de/LC_MESSAGES/: django.mo
rd_plugins/locale/fr/LC_MESSAGES/: django.mo
rd_plugins/locale/nl/LC_MESSAGES/: django.mo
rd_plugins/templates/cd_plugins/: available_languages.html
