[metadata]
name = rd_django
description = reddevil django
long_description = reddevil addon for django cms 
classifiers =
    "Programming Language :: Python"
    "Framework :: Django-cms"

author = Ruben Decrop
author_email = ruben@decrop.net
url = https://www.chessdevil.net
packages = pbr

[files]
packages =
    bycco
    tournament

[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain